{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 279,
  "lineage": "21b5f814-7955-cec0-fd98-b42c9038a58f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "LoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/publicIPAddresses/PublicIpForLB"
              }
            ],
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "location": "northeurope",
            "name": "LoadBalancer",
            "resource_group_name": "Rg_Test",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.LoadBalPubIP",
            "azurerm_resource_group.Rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "LB_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "BackEndAddressPool",
            "resource_group_name": "Rg_Test"
          },
          "dependencies": [
            "azurerm_lb.LoadBalancer",
            "azurerm_public_ip.LoadBalPubIP",
            "azurerm_resource_group.Rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/probes/ssh-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "ssh-running-probe",
            "number_of_probes": 2,
            "port": 22,
            "protocol": "Tcp",
            "resource_group_name": "Rg_Test"
          },
          "dependencies": [
            "azurerm_lb.LoadBalancer",
            "azurerm_public_ip.LoadBalPubIP",
            "azurerm_resource_group.Rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "Port",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_address_pool_ids": [
              "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 22,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 22,
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/LBRule_Port-22",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "LBRule_Port-22",
            "probe_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/probes/ssh-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "Rg_Test"
          },
          "dependencies": [
            "azurerm_lb.LoadBalancer",
            "azurerm_lb_backend_address_pool.LB_backend",
            "azurerm_lb_probe.example",
            "azurerm_public_ip.LoadBalPubIP",
            "azurerm_resource_group.Rg_name"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_address_pool_ids": [
              "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/LBRule_Port-80",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "LBRule_Port-80",
            "probe_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/probes/ssh-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "Rg_Test"
          },
          "dependencies": [
            "azurerm_lb.LoadBalancer",
            "azurerm_lb_backend_address_pool.LB_backend",
            "azurerm_lb_probe.example",
            "azurerm_public_ip.LoadBalPubIP",
            "azurerm_resource_group.Rg_name"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_address_pool_ids": [
              "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 443,
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/LBRule_Port-443",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "LBRule_Port-443",
            "probe_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/probes/ssh-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "Rg_Test"
          },
          "dependencies": [
            "azurerm_lb.LoadBalancer",
            "azurerm_lb_backend_address_pool.LB_backend",
            "azurerm_lb_probe.example",
            "azurerm_public_ip.LoadBalPubIP",
            "azurerm_resource_group.Rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NetworkInt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/networkInterfaces/NetIntVm0",
            "internal_domain_name_suffix": "kfdc2tkabncuphowy1ppty1rvg.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/virtualNetworks/Network1/subnets/Network1Subnet"
              }
            ],
            "location": "northeurope",
            "name": "NetIntVm0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Rg_Test"
          },
          "dependencies": [
            "azurerm_resource_group.Rg_name",
            "azurerm_subnet.Subnet_config",
            "azurerm_virtual_network.AZ_VirtualNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "LB_Backend_AddressPool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/networkInterfaces/NetIntVm0/ipConfigurations/internal|/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/networkInterfaces/NetIntVm0"
          },
          "dependencies": [
            "azurerm_lb.LoadBalancer",
            "azurerm_lb_backend_address_pool.LB_backend",
            "azurerm_network_interface.NetworkInt",
            "azurerm_public_ip.LoadBalPubIP",
            "azurerm_resource_group.Rg_name",
            "azurerm_subnet.Subnet_config",
            "azurerm_virtual_network.AZ_VirtualNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "location": "northeurope",
            "name": "acceptanceTestSecurityGroup1",
            "resource_group_name": "Rg_Test",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG_RULES",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "22"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1/securityRules/test123-100",
            "name": "test123-100",
            "network_security_group_name": "acceptanceTestSecurityGroup1",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "Rg_Test",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG",
            "azurerm_resource_group.Rg_name"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1/securityRules/test123-110",
            "name": "test123-110",
            "network_security_group_name": "acceptanceTestSecurityGroup1",
            "priority": 110,
            "protocol": "TCP",
            "resource_group_name": "Rg_Test",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG",
            "azurerm_resource_group.Rg_name"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "443"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1/securityRules/test123-120",
            "name": "test123-120",
            "network_security_group_name": "acceptanceTestSecurityGroup1",
            "priority": 120,
            "protocol": "TCP",
            "resource_group_name": "Rg_Test",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG",
            "azurerm_resource_group.Rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "LoadBalPubIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/publicIPAddresses/PublicIpForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.67.140.215",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "PublicIpForLB",
            "resource_group_name": "Rg_Test",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.Rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subnet_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/virtualNetworks/Network1/subnets/Network1Subnet",
            "name": "Network1Subnet",
            "resource_group_name": "Rg_Test",
            "virtual_network_name": "Network1"
          },
          "dependencies": [
            "azurerm_resource_group.Rg_name",
            "azurerm_virtual_network.AZ_VirtualNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "SubnetNetworkSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/virtualNetworks/Network1/subnets/Network1Subnet",
            "network_security_group_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "subnet_id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/virtualNetworks/Network1/subnets/Network1Subnet"
          },
          "dependencies": [
            "azurerm_lb.LoadBalancer",
            "azurerm_lb_backend_address_pool.LB_backend",
            "azurerm_lb_probe.example",
            "azurerm_lb_rule.Port",
            "azurerm_network_security_group.NSG",
            "azurerm_public_ip.LoadBalPubIP",
            "azurerm_resource_group.Rg_name",
            "azurerm_subnet.Subnet_config",
            "azurerm_virtual_network.AZ_VirtualNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "AZ_VirtualNetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4d2e4651-0b40-4745-9dd6-c6def9e371ae",
            "id": "/subscriptions/11a1d476-f53f-482c-90bc-eed7a755b2a0/resourceGroups/Rg_Test/providers/Microsoft.Network/virtualNetworks/Network1",
            "location": "northeurope",
            "name": "Network1",
            "resource_group_name": "Rg_Test",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.Rg_name"
          ]
        }
      ]
    }
  ]
}